# btwxt

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Design-Table-Refactor.md  LICENSE  Makefile  README.md  cmake_install.cmake
.github/workflows/: build-and-test.yml
build_Xcode/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
build_Xcode/CMakeScripts/: ReRunCMake.make
build_Xcode/btwxt.xcodeproj/: project.pbxproj
build_Xcode/btwxt.xcodeproj/project.xcworkspace/xcuserdata/phil-ahrenkiel.xcuserdatad/: UserInterfaceState.xcuserstate
build_Xcode/btwxt.xcodeproj/xcshareddata/xcschemes/: ALL_BUILD.xcscheme  btwxt_tests.xcscheme
build_Xcode/btwxt.xcodeproj/xcuserdata/phil-ahrenkiel.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
build_Xcode/btwxt.xcodeproj/xcuserdata/phil-ahrenkiel.xcuserdatad/xcschemes/: xcschememanagement.plist
build_Xcode/include/btwxt/: CTestTestfile.cmake  cmake_install.cmake
build_Xcode/src/: CTestTestfile.cmake  cmake_install.cmake
build_Xcode/test/: CTestTestfile.cmake  btwxt_tests[1]_include.cmake  btwxt_tests[1]_tests.cmake  cmake_install.cmake
cmake/: compiler-flags.cmake
docs/: discussion.md  methodology.md
docs/figs/: btwxt presentation.pptx  figs_all.pptx
include/btwxt/: CMakeLists.txt  Makefile  btwxt.h  cmake_install.cmake  grid-axis.h  grid-point-data.h  logging.h  messaging.h  regular-grid-interpolator.h
src/: CMakeLists.txt  Makefile  architecture.h  btwxt.cpp  btwxt.h  btwxt_export.h  cmake_install.cmake  error.cpp  error.h  grid-axis.cpp  griddeddata.cpp  griddeddata.h  gridinterp.cpp  gridinterp.h  gridpoint.cpp  gridpoint.h  hypercube.cpp  hypercube.h  interp.cpp  interp.h  longtable.cpp  longtable.h  regular-grid-interpolator-implementation.cpp  regular-grid-interpolator-implementation.h  regular-grid-interpolator-private.h  regular-grid-interpolator.cpp  roundtwo.cpp  roundtwo.h
test/: CMakeLists.txt  btwxt-tests.cpp  btwxt_test.cpp  fixtures.cpp  fixtures.hpp  grid-axis-tests.cpp  griddeddata_test.cpp  gridpoint_test.cpp  hypercube_test.cpp  implementation-tests.cpp  internal-method-tests.cpp  interp_test.cpp  large_test.cpp  main_test.cpp  math_test.cpp  private-fixtures.h  private-fixtures.hpp  public-fixtures.h  public-fixtures.hpp  roundtwo_test.cpp  scratch.cpp  scratch_func.cpp  scratch_func2.cpp  test-main.cpp
test/fixtures/: implementation-fixtures.h  public-fixtures.h
test/resources/: test_table.csv
